@@ -1,0 +1,7 @@
+  scopesDump:
+    SCOPE 0x#: top.TOP
+    SCOPE 0x#: top.t
+    SCOPE 0x#: top.t.s_axis_if
+    SCOPE 0x#: top.t.u_dut
+
+*-* All Finished *-*
