@@ -1,0 +1,21 @@
+#!/usr/bin/env python3
+# DESCRIPTION: Verilator: Verilog Test driver/expect definition
+#
+# Copyright 2025 by Wilson Snyder. This program is free software; you
+# can redistribute it and/or modify it under the terms of either the GNU
+# Lesser General Public License Version 3 or the Perl Artistic License
+# Version 2.0.
+# SPDX-License-Identifier: LGPL-3.0-only OR Artistic-2.0
+
+import vltest_bootstrap
+
+test.scenarios('vlt')
+test.top_filename = "t/t_vpi_public_depthn.v"
+
+test.compile(verilator_flags2=['--public-depth 2'])
+
+test.execute()
+
+test.files_identical(test.run_log_filename, test.golden_filename, is_logfile=True, strip_hex=True)
+
+test.passes()
